--- a/manuscript/supplemental.tex
+++ b/manuscript/supplemental.tex
@@ -80,7 +80,7 @@ Link\"{o}ping, Sweden\\
       \hspace{8pt}    \}\}\}
       }
 
-      % prior_web_data=read.csv('tree_level_interaxn_all_plants_traits_size.csv')
+      % prior_web_data=read.csv('../../data/Salix_example/tree_level_interaxn_all_plants_traits_size.csv')
       % # Remove extra data on parasitoids, etc.
       % prior_web_data[,31:57]<-NULL
       % prior_web_data[,4:26]<-NULL
@@ -98,6 +98,7 @@ Link\"{o}ping, Sweden\\
       %     }
       %   }        
       % }
+      % write.csv(prior_web,file='binary_prior_web_SG.csv',quote=F)
 
 
       To extract the galler-parsitoid network from the same study above:
@@ -137,8 +138,8 @@ Link\"{o}ping, Sweden\\
       write.csv(prior\_web\_para\_only, file="prior\_web\_para\_only.csv", quote=F)
       }
 
-      % # read in the data
-      % prior_web_data=read.csv('../data/Salix_example/tree_level_interaxn_all_plants_traits_size.csv')
+      % % # read in the data
+      % prior_web_data=read.csv('../../data/Salix_example/tree_level_interaxn_all_plants_traits_size.csv')
       % # just keep what we need
       % prior_web_data <- prior_web_data[,8:26]
 
@@ -166,7 +167,7 @@ Link\"{o}ping, Sweden\\
       % # some of the emergers were the gallers, remove those columns if we're only
       % # interested in galler-parasitoid interactions
       % prior_web_para_only <- prior_web[,c(2:6,8:9,12)]
-      % write.csv(prior_web_para_only, file="prior_web_para_only.csv", quote=F)
+      % write.csv(prior_web_para_only, file="binary_prior_web_para_only.csv", quote=F)
 
 
     \subsection*{Degree distributions and interaction probabilities}
@@ -201,17 +202,17 @@ Link\"{o}ping, Sweden\\
 
       }
 
-      %       # Now get the degree distributions from the web
-      % deg_dist_Salix=rowSums(prior_web)/ncol(prior_web)
-      % # Remove one genotype that never interacted
-      % deg_dist_Salix<-deg_dist_Salix[which(rowSums(prior_web)>0)]
-      % deg_dist_galler=colSums(prior_web)/nrow(prior_web)
-      % # Interaction probabilities are the product of plant and galler probabilities
-      % int_probs=as.numeric(deg_dist_galler%*%t(deg_dist_Salix))
+            # Now get the degree distributions from the web
+      deg_dist_Salix=rowSums(prior_web)/ncol(prior_web)
+      # Remove one genotype that never interacted
+      deg_dist_Salix<-deg_dist_Salix[which(rowSums(prior_web)>0)]
+      deg_dist_galler=colSums(prior_web)/nrow(prior_web)
+      # Interaction probabilities are the product of plant and galler probabilities
+      int_probs=as.numeric(deg_dist_galler%*%t(deg_dist_Salix))
 
-      % deg_dist_parasitoid=rowSums(prior_web_para_only)/ncol(prior_web_para_only)
-      % deg_dist_parasitized=colSums(prior_web_para_only)/nrow(prior_web_para_only)
-      % gp_int_probs=as.numeric(deg_dist_parasitized%*%t(deg_dist_parasitoid))
+      deg_dist_parasitoid=rowSums(prior_web_para_only)/ncol(prior_web_para_only)
+      deg_dist_parasitized=colSums(prior_web_para_only)/nrow(prior_web_para_only)
+      gp_int_probs=as.numeric(deg_dist_parasitized%*%t(deg_dist_parasitoid))
 
 
 \clearpage
