trying to talk about posterior webs

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -386,7 +386,7 @@ THIS SECTIONS BUILDS ON THE SALIX DATA TO ILLUSTRATE THE GAPS THERE ARE IN THE M
 
   \subsection*{Computing the credible interval around a probability estimate}
 
-      As well as obtaining posterior means and variances, it is possible to calculate a 95\% credible interval about the posterior mean. This is again straightforward to do in R (see the function "credible interval" in \emph{Appendix S2}). Calculating the 95\% credible intervals for species pairs with 0 to 50 observed co-occurrances without any observed interaction (as in Fig.~\ref{Salix_pdfs}), we see that the interval narrows dramatically as the number of observations increases. In no case, however, does the confidence interval include 0. Even for a pair of species which appeared together in all 374 sites but were never observed interacting, the confidence interval (0.001, 0.018) comes close to, but does not include zero (Table~\ref{interval_table}). 
+      As well as obtaining posterior means and variances, it is possible to calculate a 95\% credible interval about the posterior mean. This is again straightforward to do in R (see the function ``credible interval" in \emph{Appendix S2}). Calculating the 95\% credible intervals for species pairs with 0 to 50 observed co-occurrances without any observed interaction (as in Fig.~\ref{Salix_pdfs}), we see that the interval narrows dramatically as the number of observations increases. In no case, however, does the confidence interval include 0. Even for a pair of species which appeared together in all 374 sites but were never observed interacting, the confidence interval (0.001, 0.018) comes close to, but does not include zero (Table~\ref{interval_table}). 
 
       % # R code to make the table:
       % output=matrix(nrow=length(ns),ncol=5)
@@ -429,7 +429,7 @@ THIS SECTIONS BUILDS ON THE SALIX DATA TO ILLUSTRATE THE GAPS THERE ARE IN THE M
 
       Rather than calculating confidence intervals for a posterior distribution after collecting data, we may wish to know how many data points are necessary to obtain a given level of confidence that two co-occurring species do not interact. The number of samples needed will depend on both our desired level of confidence and the threshold below which we assume that two species are unlikely to ever interact. If we want to be 95\% confident that the interaction probability for two species in the \emph{Salix}-galler network is below 0.5, 0.1, or 0.01, we would need six, 51, and 101 observed co-occurrances with no observed interaction (Fig.~\ref{Salix_cdfs}; see function samples\_required in~\emph{Appendix S2}). 
       Although the prior distribution of interaction probabilities is narrower and closer to zero for the galler-parasitoid network, the number of samples required to be 95\% confident that the interaction probability is below a threshold still increases quickly; we would need 25 and 101 observed co-occurances with no observed interaction for threshold interaction probabilities of 0.1 and 0.01, respectively.
-      Given the low levels of replication in most network studies, this implies that we should have fairly low confidence in many "non-interacting" pairs of species. Even in the extensively replicated \emph{Salix}-galler-parasitoid dataset very few species pairs were observed co-occurring frequently enough to reach these thresholds (only three \emph{Salix}-galler pairs and 31 galler-parasitoid pairs were observed co-occurring frequently enough to reach the threshold for an interaction probability of 0.1, and no pairs were observed co-occurring frequently enough to reach the threshold for an interaction probability of 0.01). Discounting potential interactions, then, requires either a stronger prior expectation of no interaction (e.g., we can be highly confident that a palm tree will not predate upon a leopard no matter how many times the two species are observed together) or very extensive sampling.
+      Given the low levels of replication in most network studies, this implies that we should have fairly low confidence in many ``non-interacting" pairs of species. Even in the extensively replicated \emph{Salix}-galler-parasitoid dataset very few species pairs were observed co-occurring frequently enough to reach these thresholds (only three \emph{Salix}-galler pairs and 31 galler-parasitoid pairs were observed co-occurring frequently enough to reach the threshold for an interaction probability of 0.1, and no pairs were observed co-occurring frequently enough to reach the threshold for an interaction probability of 0.01). Discounting potential interactions, then, requires either a stronger prior expectation of no interaction (e.g., we can be highly confident that a palm tree will not predate upon a leopard no matter how many times the two species are observed together) or very extensive sampling.
 
 
       \begin{figure}[ht]
@@ -441,6 +441,14 @@ THIS SECTIONS BUILDS ON THE SALIX DATA TO ILLUSTRATE THE GAPS THERE ARE IN THE M
 
 
   \subsection*{Scaling up to network metrics}
+
+    Using the prior distributions and procedures described above, we calculated posterior probability descriptions for each pair of \emph{Salix} and galler or galler and parasitoid species that were not observed interacting, with each posterior distribution reflecting the number of times the pair of species had been observed co-occurring. Using these posterior distributions and assuming probabilities of 1 for pairs of species that were observed interacting, we created a suite of 100 webs of each network type by randomly sampling from each posterior distribution. These networks always included the interactions observed in the original network, as well as other interactions which may occur but have not been observed. 
+
+
+    After obtaining these posterior networks, we calculated the connectance of each web, as well as the number of links per resource (\emph{Salix} in the \emph{Salix}-galler networks or galler in the galler-parasitoid networks) and links per consumer. To demonstrate how these network metrics will be affected by detection uncertainty, we then created a suite of filtered networks for each posterior network. Networks were filtered by randomly sampling 99\%, 95\%, 90\%, 80\%, 70\&, 60\%, and 50\% of the interactions included in each posterior network. For level of detection accuracy, we created 100 randomly-sampled network per posterior-probability network. We then calculated the same network properties as described above.
+
+
+    
 
 
   % [[What if we have only one site? Can we use the number of observations of a pair of species interacting with any partners as the number of times they co-occur, and the number of interactions within the pair as k? This will be sort-of valid for insects but not for plants when researchers camp out by plant individuals... ]]
