spellcheck, all sections now included?

--- a/manuscript/supplemental.tex
+++ b/manuscript/supplemental.tex
@@ -55,9 +55,9 @@ Link\"{o}ping, Sweden\\
       transformed these data to a binary genotype-galler network 
       matrix, where an entry $ij$ was 1 if galler $i$ was observed 
       on any branch of genotype $j$ and 0 otherwise. In total, this 
-      network contained 75 realized galler-genotype interactions 
+      network contained 75 realised galler-genotype interactions 
       out of a potential 104. One \emph{S. hookeriana} genotype did
-      not interact with any galles and was removed from the network.
+      not interact with any gallers and was removed from the network.
       The R code used to extract this 
       network follows:
 
@@ -184,9 +184,9 @@ Link\"{o}ping, Sweden\\
       interaction partners (number of column or rows). Degree 
       distributions calculated, we can then calculate the 
       probability of each interaction as the product of the 
-      normalized degrees of the two species. For example, the 
+      normalised degrees of the two species. For example, the 
       probability of an interaction between two species with 
-      normalized degrees of 0.5 (each interacts with half of the 
+      normalised degrees of 0.5 (each interacts with half of the 
       available partners) is 0.25. R code used to do this follows:
 
 
