--- a/manuscript/supplemental.tex
+++ b/manuscript/supplemental.tex
@@ -62,7 +62,7 @@ Link\"{o}ping, Sweden\\
       network follows:
 
 
-      \vspace{12pt}
+      \vspace{6pt}
       \emph{
       \noindent \hspace{-4pt} prior\_web\_data=read.csv(``tree\_level\_interaxn\_all\_plants\_traits\_size.csv")\\
       \# Remove extra data on parasitoids, etc.\\
@@ -81,7 +81,7 @@ Link\"{o}ping, Sweden\\
       \hspace{12pt}      prior\_web[r,c]=0\\
       \hspace{8pt}    \}\}\}
       \# Remove non-interactive genotype
-      prior\_web<-prior\_web[which(rowSums(prior\_web)\textgreater0),]
+      prior\_web\textless-prior\_web[which(rowSums(prior\_web)\textgreater0),]
       }
 
       % prior_web_data=read.csv('../../data/Salix_example/tree_level_interaxn_all_plants_traits_size.csv')
@@ -105,43 +105,39 @@ Link\"{o}ping, Sweden\\
       % prior_web<-prior_web[which(rowSums(prior_web)>0),]
       % write.csv(prior_web,file='binary_prior_web_SG.csv',quote=F)
 
+      \vspace{6pt}
+
 
       To extract the galler-parsitoid network from the same study above:
 
 
-      \vspace{12pt}
-      \emph{
-      \noindent \hspace{-4pt} 
-      prior\_web\_data=read.csv('tree\_level\_interaxn\_all\_plants\_traits\_size.csv')\\
-      prior\_web\_data <- prior\_web\_data[,8:26]
+      \vspace{6pt}
+      \noindent \emph{
+      \hspace{-4pt} prior\_web\_data=read.csv(``tree\_level\_interaxn\_all\_plants\_traits\_size.csv")\\
+      prior\_web\_data \textless- prior\_web\_data[,8:26]\\
 
-      \# Build a web with interactions=1 for any parasitoid on any galler
-      prior\_web=data.frame()
+      \# Build a web with interactions=1 for any parasitoid on any galler\\
+      prior\_web=data.frame()\\
 
-      \# each column contains all interactions for a particular parasitoid-galler combination
-      for(column in 1:ncol(prior\_web\_data)){
-      \hspace{-4pt}   \# the column name gives the species which makes the gall, followed by the species emerging from the gall
-      \hspace{-4pt}   galler\_emerged=strsplit(colnames(prior\_web\_data)[column], "\_")
-      \hspace{-4pt}   galler = galler\_emerged[[1]][1]
-      \hspace{-4pt}   emerged = galler\_emerged[[1]][2]
+      \# each column contains all interactions for a particular parasitoid-galler combination\\
+      for(column in 1:ncol(prior\_web\_data))\{\\
+      \hspace{-4pt}   \# the column name gives the species which makes the gall, followed by the species emerging from the gall\\
+      \hspace{-4pt}   galler\_emerged=strsplit(colnames(prior\_web\_data)[column], "\_")\\
+      \hspace{-4pt}   galler = galler\_emerged[[1]][1]\\
+      \hspace{-4pt}   emerged = galler\_emerged[[1]][2]\\
         
-      \hspace{-4pt}   \# the strength of the interaction is the sum of the column (number of galls across all branches sampled)
-      \hspace{-4pt}   linkstrength = sum(prior\_web_data[,column])
-      \hspace{-4pt}   prior\_web[as.character(galler),as.character(emerged)] <- linkstrength
-      } 
-
-      \# Make the naS into 0
-      prior\_web[is.na(prior\_web)] <- 0
-
-      \# remove emerging gallers with no parasitoids
-      prior\_web\_para\_only <- prior\_web[,c(2:6,8:9,12)]
-
-      \# convert interaction strengths to 1
-      prior\_web[which(prior\_web>0)] <- 1
-
-
-      write.csv(prior\_web\_para\_only, file="prior\_web\_para\_only.csv", quote=F)
-      }
+      \hspace{-4pt}   \# the strength of the interaction is the sum of the column (number of galls across all branches sampled)\\
+      \hspace{-4pt}   linkstrength = sum(prior\_web\_data[,column])\\
+      \hspace{-4pt}   prior\_web[as.character(galler),as.character(emerged)] \textless- linkstrength\\
+      \} 
+      \# Make the NAs into 0\\
+      prior\_web[is.na(prior\_web)] \textless- 0\\
+      \# remove emerging gallers with no parasitoids\\
+      prior\_web\_para\_only \textless- prior\_web[,c(2:6,8:9,12)]\\
+      \# convert interaction strengths to 1\\
+      prior\_web[which(prior\_web\textgreater0)] \textless- 1\\
+      write.csv(prior\_web\_para\_only, file=``prior\_web\_para\_only.csv", quote=F)
+      }\par
 
       % % # read in the data
       % prior_web_data=read.csv('../../data/Salix_example/tree_level_interaxn_all_plants_traits_size.csv')
