fixed a compilation error

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -335,7 +335,7 @@ The bottom line is that separating different sources of uncertainty is difficult
 
     The mean of these interaction probabilities is 0.163, approximately half the $\lambda_{MLE}$ obtained from the observed data. We can use the distribution of these interaction probabilities as our prior distribution and estimate the uncertainty surrounding our $\lambda_{MLE}$. With some simple R code (function calculate\_parameters, \emph{Appendix S2}), we obtain prior parameters $\alpha$=1.050830 and $\beta$=5.365892. Using these priors in equations~\ref{mean} and~\ref{variance} above (or in the R function calculate\_distribution in \emph{Appendix S2}), we find a prior mean interaction probability of 0.16376436 and a prior variance of 0.02134199. Adding the observed data ($n=10$, $k=3$) and using the same code, we obtain posterior parameters $\alpha'$=4.05083 and $\beta'$=12.36589 and a posterior distribution of $\lambda$ with mean 0.247 and variance 0.011. Comparing the posterior distribution to the prior, we see that the posterior is closer to the observed data and that the additional data has reduced the variance. We may also wish to calculate a credible interval (analogous to the frequentist confidence interval). This is also quite straightforward in R (see function credible\_interval in \emph{Appendix S2}). In this case, a 95\% credible interval for the mean of theta is (0.077, 0.474).
 
-    Now, consider the case where the two species have never been observed interacting across $n$ trials, i-e. $k=0$. The question is then ``what is the probability these two species do not interact''$? Since it is not possible to prove that the two species could never interact (strickly speaking, in such an approach $\lambda=0$ is impossible), given the framework above we must fix a threshold below which we consider that there is no interaction ($\lambda~0$). We call this threshold probability $\lambda*$. We then use the cumulative distribution function to estimate $P(\lambda<\lambda*|L=0,n)$ for different $n$. The 
+    Now, consider the case where the two species have never been observed interacting across $n$ trials, i-e. $k=0$. The question is then ``what is the probability these two species do not interact''? Since it is not possible to prove that the two species could never interact (strickly speaking, in such an approach $\lambda=0$ is impossible), given the framework above we must fix a threshold below which we consider that there is no interaction ($\lambda \sim 0$). We call this threshold probability $\lambda*$. We then use the cumulative distribution function to estimate $P(\lambda<\lambda*|L=0,n)$ for different $n$. The 
     function plot\_precision in \emph{Appendix S2} calculates distribution function for $\lambda*$ with an increasing number of trials. The figure below illustrates this distribution for $\lambda*$=0.1. This yields a surprising result: it requires \textgreater24 observations of no interactions to be 95\% sure that the interaction probability is smaller than 0.1 (recall Fig.~\ref{upper_limits}). Note the special case where there is no observation of the two species co-occurring, $n = 0$  In this situation, the posterior distribution converges to the prior distribution since the data include no information on the probability with which species might interact should they co-occur; see above).
 
 \section*{Scaling up uncertainty from pairwise interactions to networks}
@@ -349,7 +349,7 @@ The bottom line is that separating different sources of uncertainty is difficult
       We use an extensively sampled \emph{Salix}-galler-parasitoid meta-network as a case study. This dataset consists of a single community type sampled across Europe; willow (\emph{Salix}) species, willow-galling sawflies (Hymenoptera, Tenthredinidae, Nematinae, Euurina), and their natural enemies (hymenopteran parasitoids and coleopteran, lepidopteran, dipteran, and hymenopteran inquilines). The data were collected over 29 years (1982-2010) at 374 unique locations across Europe ranging from Sicily to the Arctic. Including repeated visits to a number of sites, the data set contains 641 site-visits, each of which can be considered as a network in its own right. Here we consider each network as an independent sample from which to build the meta-network. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes and 126 natural enemy nodes. Interactions were determined by dissecting and rearing gall inhabitants from 165,424 galls. The high spatiotemporal resolution of this network and the unusually high sampling effor implemented at the site level (641 site-visits, which can be considered as repeated samples of the network) makes this dataset particularly well suited for testing this method.
 
 
-      Importantly, while large, this network illustrates the very real constraints on the sampling of ecological networks. As a baseline, we may compare the frequency of co-occurrence of taxa to reveal the challenge of having sufficiently large $n_{ij}$ (Fig.~\citep{upper_limits}). In the example data, most (3986 out of 4992) pairs of species are never found co-occurring, and for species found co-occurring the number of co-occurrences was generally low (Fig.~\ref{histograms}A). 
+      Importantly, while large, this network illustrates the very real constraints on the sampling of ecological networks. As a baseline, we may compare the frequency of co-occurrence of taxa to reveal the challenge of having sufficiently large $n_{ij}$ (Fig.~\ref{upper_limits}). In the example data, most (3986 out of 4992) pairs of species are never found co-occurring, and for species found co-occurring the number of co-occurrences was generally low (Fig.~\ref{histograms}A). 
 %DG: can you provide mean and variance in the text?
       Among the species which did sometimes interact when co-occurring, the incidence of interaction was actually low. 
 %DG: in the following, would be useful to present both absolute and relative numbers, or just relative
